# ansible-role-headscale

./: .ansible-lint  LICENSE  README.md  justfile  pyproject.toml
defaults/: main.yml
files/: config.yaml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  verify.yml
tasks/: configure.yml  main.yml
templates/: headscale.service.j2
vars/: main.yml
