[tool.poetry]
name = "headscale"
version = "0.1.0"
description = "Headscale Ansible role"
authors = ["Cameron Stevenson <cksteve@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
ansible-core = "^2.12.2"

[tool.poetry.dev-dependencies]
ansible-lint = "^6.0.1"
molecule-vagrant = "^1.0.0"
molecule = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
